--- a/config/ps3.config.yaml
+++ b/config/ps3.config.yaml
@@ -3,7 +3,9 @@ scale_linear: 0.7
 scale_linear_turbo: 1.5
 
 axis_angular: 0
-scale_angular: 0.4
+scale_angular: 0.75
 
-enable_button: 8  # L2 shoulder button
-enable_turbo_button: 10  # L1 shoulder button
+enable_button: 0  # L2 shoulder button - on ps4 is square
+enable_turbo_button: 1  # L1 shoulder button - on ps4 is X
+
+#modified for working on PS4 controller, the mapping is different.
